# server/routes/api.php
@@ -12,12 +12,12 @@ Route::post('/auth/signup', [AuthController::class, 'signup']);
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('/auth/logout', [AuthController::class, 'logout']);
     Route::get('/auth/user', [AuthController::class, 'user']);
-    Route::apiResource('posts', App\Http\Controllers\Api\PostController::class);
-    Route::apiResource('analytics', App\Http\Controllers\Api\AnalyticController::class);
-    Route::apiResource('categories', App\Http\Controllers\Api\CategoryController::class);
-    Route::apiResource('comments', App\Http\Controllers\Api\CommentController::class);
-    Route::apiResource('medias', App\Http\Controllers\Api\MediaController::class);
-    Route::apiResource('postmedias', App\Http\Controllers\Api\PostMediaController::class);
+    Route::apiResource('post', App\Http\Controllers\Api\PostController::class);
+    Route::apiResource('analytic', App\Http\Controllers\Api\AnalyticController::class);
+    Route::apiResource('category', App\Http\Controllers\Api\CategoryController::class);
+    Route::apiResource('comment', App\Http\Controllers\Api\CommentController::class);
+    Route::apiResource('media', App\Http\Controllers\Api\MediaController::class);
+    Route::apiResource('postmedia', App\Http\Controllers\Api\PostMediaController::class);
     Route::apiResource('postseo', App\Http\Controllers\Api\PostSeoController::class);
     Route::apiResource('setting', App\Http\Controllers\Api\SettingController::class);
 });
